--- a/index.html
+++ b/index.html
@@ -12,33 +12,32 @@
 
 <body>
 
-    <header class="md:container mx-auto">
+    <header class="container mx-auto px-4">
         <nav>
             <div class="navbar bg-[#f9f7f3] ">
-                <div class="flex justify-between w-full">
-                    <div class="ml-20">
-                        <a class="btn w-39 h-15 bg-green-400 text-xl">Blog</a>
+                <div class="flex flex-col md:flex-row justify-between w-full">
+                    <div class="mb-2 md:mb-0 ml-4 md:ml-20">
+                        <a class="btn w-full md:w-39 h-12 bg-green-400 text-xl">Blog</a>
                     </div>
-                    <div class="flex">
-                        <img class="h-5 w-5" src="./assets/logo.png" alt="">
+                    <div class="flex items-center justify-center mb-2 md:mb-0">
+                        <img class="h-8 w-8 mr-2" src="./assets/logo.png" alt="">
                         <a class="font-bold">Donate Bangladesh</a>
                     </div>
-                    <div class="flex items-center mr-20">
-                        <img class="h-10 w-10" src="./assets/coin.png" alt="">
-                        <p class="font-bold text-xl">5500 <span>BDT</span></p>
+                    <div class="flex items-center justify-center mr-4 md:mr-20">
+                        <img class="h-8 w-8" src="./assets/coin.png" alt="">
+                        <p class="font-bold text-xl ml-2">5500 <span>BDT</span></p>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
 
-
     <!-- Main section one -->
 
-    <main class="md:container mx-auto p-4 bg-white rounded shadow-md">
-        <div class="md:container mx-auto p-4 bg-white rounded">
+    <main class="container mx-auto p-4 bg-white rounded shadow-md">
+        <div class="container mx-auto p-4 bg-white rounded">
             <!-- Buttons -->
-            <div class="flex justify-center gap-3 mb-4">
+            <div class="flex flex-col md:flex-row justify-center gap-3 mb-4">
                 <button class="btn px-4 py-2 bg-green-400 text-black rounded">Donation</button>
                 <button class="btn px-4 py-2 bg-white text-black rounded">History</button>
             </div>
@@ -46,13 +45,13 @@
             <!-- Main Content -->
             <div class="main-div">
                 <div class="divFirst p-4 bg-gray-50 rounded shadow">
-                    <div class="flex space-x-4">
+                    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <!-- Image Div -->
-                        <div class="image-div w-1/3  text-center">
+                        <div class="image-div md:w-1/3 w-full text-center">
                             <img src="./assets/noakhali.png" alt="">
                         </div>
                         <!-- Text Div -->
-                        <div class="text-div w-2/3 p-4">
+                        <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
@@ -60,7 +59,7 @@
                                     <p class="font-normal text-sm">0 <span>BDT</span></p>
                                 </div>
                                 <h4 class="text-lg font-bold">Donate for Flood at Noakhali, Bangladesh</h4>
-                                <p class="text-gray-700"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+                                <p class="text-gray-700"> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your donation will help provide essential supplies and to those affected by this disaster. Every contribution, big or small, makes difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                             </div>
                             <!-- Text Div Two -->
                             <div class="text-div-two">
@@ -76,26 +75,26 @@
 
         <!-- Main section two -->
 
-        <div class="md:container mx-auto my-2 p-4 bg-white rounded">
+        <div class="container mx-auto my-2 p-4 bg-white rounded">
 
 
             <!-- Main Content -->
             <div class="main-div">
                 <div class="divFirst p-4 bg-gray-50 rounded shadow">
-                    <div class="flex space-x-4">
+                    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <!-- Image Div -->
-                        <div class="image-div w-1/3  text-center">
+                        <div class="image-div md:w-1/3 w-full text-center">
                             <img src="./assets/feni.png" alt="">
                         </div>
                         <!-- Text Div -->
-                        <div class="text-div w-2/3 p-4">
+                        <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
                                     <img class="h-4 w-4 " src="./assets/coin.png" alt="">
                                     <p class="font-normal text-sm">0 <span>BDT</span></p>
                                 </div>
-                                <h4 class="text-lg font-bold">Donate for Flood Relief in Feni,Bangladesh</h4>
+                                <h4 class="text-lg font-bold">Donate for Flood Relief in Feni, Bangladesh</h4>
                                 <p class="text-gray-700"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
                             </div>
                             <!-- Text Div Two -->
@@ -112,19 +111,19 @@
 
         <!-- Main section three -->
 
-        <div class="md:container mx-auto my-2 p-4 bg-white rounded">
+        <div class="container mx-auto my-2 p-4 bg-white rounded">
 
 
             <!-- Main Content -->
             <div class="main-div">
                 <div class="divFirst p-4 bg-gray-50 rounded shadow">
-                    <div class="flex space-x-4">
+                    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <!-- Image Div -->
-                        <div class="image-div w-1/3  text-center">
+                        <div class="image-div md:w-1/3 w-full text-center">
                             <img src="./assets/quota-protest.png" alt="">
                         </div>
                         <!-- Text Div -->
-                        <div class="text-div w-2/3 p-4">
+                        <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
@@ -145,9 +144,6 @@
             </div>
         </div>
     </main>
-
-
-
 
     <script src="script/script.js"></script>
 </body>
