--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind link -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- DaisyUI link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+        body{
+            font-family: "Lexend", sans-serif;
+        }
+    </style>
     <title>Donation Bangladesh</title>
 </head>
 
@@ -34,7 +45,7 @@
 
     <!-- Main section one -->
 
-    <main class="container mx-auto p-4 bg-white rounded shadow-md">
+    <main class="container mx-auto p-4 bg-white rounded">
         <div class="container mx-auto p-4 bg-white rounded">
             <!-- Buttons -->
             <div class="flex flex-col md:flex-row justify-center gap-3 mb-4">
@@ -55,7 +66,7 @@
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
-                                    <img class="h-4 w-4 " src="./assets/coin.png" alt="">
+                                    <img class="h-4 w-4 " src="./assets/coin.png">
                                     <p class="font-normal text-sm">0 <span>BDT</span></p>
                                 </div>
                                 <h4 class="text-lg font-bold">Donate for Flood at Noakhali, Bangladesh</h4>
@@ -91,7 +102,7 @@
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
-                                    <img class="h-4 w-4 " src="./assets/coin.png" alt="">
+                                    <img class="h-4 w-4 " src="./assets/coin.png">
                                     <p class="font-normal text-sm">0 <span>BDT</span></p>
                                 </div>
                                 <h4 class="text-lg font-bold">Donate for Flood Relief in Feni, Bangladesh</h4>
@@ -127,7 +138,7 @@
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
                                 <div class="flex items-center bg-gray-200 p-2 gap-1 rounded">
-                                    <img class="h-4 w-4 " src="./assets/coin.png" alt="">
+                                    <img class="h-4 w-4 " src="./assets/coin.png">
                                     <p class="font-normal text-sm">0 <span>BDT</span></p>
                                 </div>
                                 <h4 class="text-lg font-bold">Aid for Injured in the Quota Movement</h4>
