--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <!-- History  -->
 
-    <section id="historyId" class="container h-24 mx-auto my-2 p-4 bg-white rounded">
+    <section id="historyId" class="hidden container h-24 mx-auto my-2 p-4 bg-white rounded">
 
 
         <!-- Main Content -->
