--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         body {
             font-family: "Lexend", sans-serif;
         }
-
     </style>
     <title> 1 Donation Bangladesh</title>
 </head>
@@ -37,7 +36,8 @@
                     </div>
                     <div class="flex items-center justify-center mr-4 md:mr-20">
                         <img class="h-8 w-8" src="./assets/coin.png" alt="">
-                        <p id="account-balance" class="font-bold text-xl ml-2">5500 </p><p class="font-bold text-xl ml-2">BDT</p>
+                        <p id="account-balance" class="font-bold text-xl ml-2">5500 </p>
+                        <p class="font-bold text-xl ml-2">BDT</p>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,8 @@
                             <div class="text-div-two">
                                 <input id="addedDonation-one" type="text" class="w-full p-2 border rounded mb-4"
                                     placeholder="Write Donation Amount">
-                                <button id="donate-btn-one" class="btn openModalBtn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
+                                <button id="donate-btn-one"
+                                    class="btn openModalBtn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
                                     Now</button>
                             </div>
                         </div>
@@ -131,7 +132,8 @@
                             <div class="text-div-two">
                                 <input id="addedDonation-two" type="text" class="w-full p-2 border rounded mb-4"
                                     placeholder="Write Donation Amount">
-                                <button id='donate-btn-two'class="btn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
+                                <button id='donate-btn-two'
+                                    class="btn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
                                     Now</button>
                             </div>
                         </div>
@@ -175,7 +177,8 @@
                             <div class="text-div-two">
                                 <input id="addedDonation-three" type="text" class="w-full p-2 border rounded mb-4"
                                     placeholder="Write Donation Amount">
-                                <button id="donate-btn-three" class="btn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
+                                <button id="donate-btn-three"
+                                    class="btn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
                                     Now</button>
                             </div>
                         </div>
@@ -194,37 +197,17 @@
         <div class="main-div">
             <div class="divFirst p-4 bg-gray-50 rounded shadow">
                 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                   <div>
-                    <h2>Here is your text</h2>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                    <h2>Here is your text</h2><br>
-                   </div>
-                    
+                    <div>
+                        <div id="historyDetails">
+
+                        </div>
+                        <div id="bdTime">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -233,7 +216,7 @@
     <script src="script/library.js"></script>
     <script src="script/features.js"></script>
     <script src="script/test.js"></script>
-    
+
 </body>
 
 </html>
