--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="flex items-center justify-center mr-4 md:mr-20">
                         <img class="h-8 w-8" src="./assets/coin.png" alt="">
-                        <p id="account-balance" class="font-bold text-xl ml-2">5500 </p>
+                        <p id="account-balance" class="font-bold text-xl ml-2">99999999900 </p>
                         <p class="font-bold text-xl ml-2">BDT</p>
                     </div>
                 </div>
