--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             font-family: "Lexend", sans-serif;
         }
     </style>
-    <title> 1 Donation Bangladesh</title>
+    <title>Donation Bangladesh</title>
 </head>
 
 <body>
-
+    <!-- Navbar -->
     <header class="container mx-auto px-4">
         <nav class="h-30 bg-[#f9f7f3]">
             <div class="navbar h-15 bg-[#f9f7f3] ">
@@ -55,9 +55,10 @@
         </div>
     </section>
 
-    <!-- Main section one -->
+    <!-- Main section -->
 
     <main id="donationId" class="container mx-auto p-4 bg-white rounded">
+        <!-- Main section one -->
         <div class="container mx-auto p-4 bg-white rounded">
 
             <!-- Main Content -->
@@ -72,9 +73,10 @@
                         <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
-                                <div class="w-16 flex items-center bg-gray-200 p-15 gap-1 rounded">
+                                <div class="max-w-20 flex items-center bg-gray-200 gap-1 rounded">
                                     <img class="h-4 w-4 " src="./assets/coin.png">
-                                    <p id="added-balance" class="font-normal text-sm">0 <span>BDT</span></p>
+                                    <p id="added-balance" class="font-normal text-sm">0 </p>
+                                    <p class="font-normal text-sm">BDT</p>
                                 </div>
 
                                 <h4 class="text-lg font-bold">Donate for Flood at Noakhali, Bangladesh</h4>
@@ -116,9 +118,11 @@
                         <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
-                                <div class="w-16 flex items-center bg-gray-200 p-25 gap-1 rounded">
+                                <div class="max-w-20 flex items-center bg-gray-200  gap-1 rounded">
                                     <img class="h-4 w-4 " src="./assets/coin.png">
-                                    <p class="font-normal text-sm">0 <span>BDT</span></p>
+                                    <p id="oldBalance" class="font-normal text-sm">0
+                                        </p>
+                                    <p class="font-normal text-sm">BDT</p>
                                 </div>
                                 <h4 class="text-lg font-bold">Donate for Flood Relief in Feni, Bangladesh</h4>
                                 <p class="text-gray-700"> The recent floods in Feni have devastated local communities,
@@ -130,7 +134,7 @@
                             </div>
                             <!-- Button section Two -->
                             <div class="text-div-two">
-                                <input id="addedDonation-two" type="text" class="w-full p-2 border rounded mb-4"
+                                <input id="neBalance" type="text" class="w-full p-2 border rounded mb-4"
                                     placeholder="Write Donation Amount">
                                 <button id='donate-btn-two'
                                     class="btn w-full px-4 py-2 bg-green-400 text-black font-bold rounded">Donate
@@ -160,9 +164,10 @@
                         <div class="text-div md:w-2/3 w-full p-4">
                             <!-- Text Div One -->
                             <div class="text-div-one mb-4">
-                                <div class="w-16 flex items-center bg-gray-200 p-15 gap-1 rounded">
+                                <div class="max-w-20 flex items-center bg-gray-200  gap-1 rounded">
                                     <img class="h-4 w-4 " src="./assets/coin.png">
-                                    <p class="font-normal text-sm">0 <span>BDT</span></p>
+                                    <p id="oldBla" class="font-normal text-sm">0 </p>
+                                    <p class="font-normal text-sm"></p>BDT</p>
                                 </div>
                                 <h4 class="text-lg font-bold">Aid for Injured in the Quota Movement</h4>
                                 <p class="text-gray-700"> The recent Quota movement has resulted in numerous injuries
@@ -215,7 +220,7 @@
 
     <script src="script/library.js"></script>
     <script src="script/features.js"></script>
-    <script src="script/test.js"></script>
+    <script src="script/addMoney.js"></script>
 
 </body>
 
